# osint-trust-envelope

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
src/osint_trust_envelope/: __init__.py  trust.py
tests/: test_corroboration.py  test_identity_corroboration.py  test_trust_wrappers.py
